# grandmaster

./: .gitignore  CMakeLists.txt  README.md  qresource.qrc  run.sh
assets/styles/: styles.qss
include/: chessboard.h  constants.h  piece.h
src/: chessboard.cpp  main.cpp  piece.cpp
